--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@ body{
 	margin: 0% 20%;
 	height:200%;
 }
+
+.centerD{
+	text-align:center;
+	
+}
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 #cssmenu,
 #cssmenu ul,
