--- a/css/reg.css
+++ b/css/reg.css
@@ -80,3 +80,9 @@ input[type="submit"] {
   border-radius: 3px;
   box-shadow: 0px 2px 5px #50C2F2;
 }
+input[type="text"]{
+	font-size:24px;
+}
+input[type="password"]{
+	font-size:24px;
+}
